docs(api): 完善API设计规范文档
- 新增版本控制章节，包括URL版本控制、请求头版本控制及版本兼容策略
- 新增错误处理规范章节，涵盖全局异常处理和错误响应格式
- 新增批量操作设计章节，包括批量查询、创建、更新和删除操作
- 新增并发控制设计章节，包含乐观锁、悲观锁和幂等性设计
- 新增缓存策略设计章节，介绍接口缓存和响应头缓存控制
- 新增限流设计章节，包括接口限流注解和全局限流配置
- 新增日志规范章节，涵盖请求日志记录和审计日志
- 新增常见问题与解决方案章节，解决大数据量分页查询、大文件上传等问题
- 新增API设计检查清单，帮助开发者规范API设计
- 完善API接口加密文档，补充模块架构、核心类结构和工作机制说明
- 补充API加密配置项说明，新增密钥对生成方法
- 优化API加密流程图，详细展示请求解密和响应加密流程
- 增加敏感操作加密示例，如修改密码、绑定银行卡等场景